# kiro

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .mailmap  AGENTS.md  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  meson.build  meson.options
data/: dev.anmitali.kiro.appdata.xml  dev.anmitali.kiro.desktop.in  dev.anmitali.kiro.gschema.xml  kz.anmitali.kiro.appdata.xml  kz.anmitali.kiro.desktop.in  kz.anmitali.kiro.gschema.xml  meson.build
flatpak/: dev.anmitali.kiro.yml
po/: LINGUAS  POTFILES  en.po  kiro.pot  meson.build  ru.po
src/: engine.vala  main.vala  meson.build  settings.vala  ui.vala
